--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,1 +1,60 @@
-<p>test works!</p>
+<div>
+    <p (click)=outputing()>test works!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In harum quod itaque accusamus iusto, illum odio ut
+        libero
+        sapiente suscipit veniam cumque. Molestias itaque praesentium adipisci! Dignissimos assumenda hic minima!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In harum quod itaque accusamus iusto, illum odio ut
+        libero
+        sapiente suscipit veniam cumque. Molestias itaque praesentium adipisci! Dignissimos assumenda hic minima!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In harum quod itaque accusamus iusto, illum odio ut
+        libero
+        sapiente suscipit veniam cumque. Molestias itaque praesentium adipisci! Dignissimos assumenda hic minima!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In harum quod itaque accusamus iusto, illum odio ut
+        libero
+        sapiente suscipit veniam cumque. Molestias itaque praesentium adipisci! Dignissimos assumenda hic minima!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In harum quod itaque accusamus iusto, illum odio ut
+        libero
+        sapiente suscipit veniam cumque. Molestias itaque praesentium adipisci! Dignissimos assumenda hic minima!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In harum quod itaque accusamus iusto, illum odio ut
+        libero
+        sapiente suscipit veniam cumque. Molestias itaque praesentium adipisci! Dignissimos assumenda hic minima!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In harum quod itaque accusamus iusto, illum odio ut
+        libero
+        sapiente suscipit veniam cumque. Molestias itaque praesentium adipisci! Dignissimos assumenda hic minima!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In harum quod itaque accusamus iusto, illum odio ut
+        libero
+        sapiente suscipit veniam cumque. Molestias itaque praesentium adipisci! Dignissimos assumenda hic minima!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In harum quod itaque accusamus iusto, illum odio ut
+        libero
+        sapiente suscipit veniam cumque. Molestias itaque praesentium adipisci! Dignissimos assumenda hic minima!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In harum quod itaque accusamus iusto, illum odio ut
+        libero
+        sapiente suscipit veniam cumque. Molestias itaque praesentium adipisci! Dignissimos assumenda hic minima!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In harum quod itaque accusamus iusto, illum odio ut
+        libero
+        sapiente suscipit veniam cumque. Molestias itaque praesentium adipisci! Dignissimos assumenda hic minima!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In harum quod itaque accusamus iusto, illum odio ut
+        libero
+        sapiente suscipit veniam cumque. Molestias itaque praesentium adipisci! Dignissimos assumenda hic minima!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In harum quod itaque accusamus iusto, illum odio ut
+        libero
+        sapiente suscipit veniam cumque. Molestias itaque praesentium adipisci! Dignissimos assumenda hic minima!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In harum quod itaque accusamus iusto, illum odio ut
+        libero
+        sapiente suscipit veniam cumque. Molestias itaque praesentium adipisci! Dignissimos assumenda hic minima!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In harum quod itaque accusamus iusto, illum odio ut
+            libero
+            sapiente suscipit veniam cumque. Molestias itaque praesentium adipisci! Dignissimos assumenda hic minima!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In harum quod itaque accusamus iusto, illum odio ut
+                libero
+                sapiente suscipit veniam cumque. Molestias itaque praesentium adipisci! Dignissimos assumenda hic minima!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In harum quod itaque accusamus iusto, illum odio ut
+                    libero
+                    sapiente suscipit veniam cumque. Molestias itaque praesentium adipisci! Dignissimos assumenda hic minima!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In harum quod itaque accusamus iusto, illum odio ut
+                        libero
+                        sapiente suscipit veniam cumque. Molestias itaque praesentium adipisci! Dignissimos assumenda hic minima!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In harum quod itaque accusamus iusto, illum odio ut
+                            libero
+                            sapiente suscipit veniam cumque. Molestias itaque praesentium adipisci! Dignissimos assumenda hic minima!</p>
+</div>
